--- a/gallery/src/sass/custom/_main.scss
+++ b/gallery/src/sass/custom/_main.scss
@@ -45,7 +45,7 @@ img {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   max-width: 1140px;
   margin: 1rem auto;
 
