--- a/gallery/src/sass/custom/_main.scss
+++ b/gallery/src/sass/custom/_main.scss
@@ -22,7 +22,7 @@ img {
 
 #intro {
   text-align: center;
-  max-width: 1140px;
+  max-width: 1180px;
   margin: 1rem auto 2rem auto;
 
   h1 {
@@ -46,16 +46,18 @@ img {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  max-width: 1140px;
+  max-width: 1180px;
   margin: 1rem auto;
 
   .gallery-item {
-    background-color: $gray200;
+    background-color: $gray400;
     border-radius: 10px;
     padding: 1rem;
     margin: .5rem;
-    box-shadow: 2px 1px 20px 2px rgba(0,0,0,0);
-    transition: box-shadow 0.5s ease-in-out;
+    box-shadow: 2px 1px 20px 2px rgba(0,0,0,0.1);
+    transition: box-shadow;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
 
     &:hover {
       box-shadow: 2px 1px 20px 2px rgba(0, 0, 0, 0.55);
