--- a/gallery/src/sass/custom/_main.scss
+++ b/gallery/src/sass/custom/_main.scss
@@ -20,6 +20,10 @@ img {
   height: 240px;
 }
 
+.active {
+  display: block;
+}
+
 #intro {
   text-align: center;
   max-width: 1180px;
@@ -35,25 +39,25 @@ img {
     background-color: $blue600;
     color: $gray200;
     border-radius: 30px;
+    margin: 0 .5rem;
     padding: .5rem;
     min-width: 130px;
-    margin: 0 .5rem;
+    cursor: pointer;
+
+    &:hover {
+      background-color: $blue700;
+    }
   }
 }
 
 #gallery {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  max-width: 1180px;
-  margin: 1rem auto;
-
-  .gallery-item {
+   .gallery-item {
     background-color: $gray400;
     border-radius: 10px;
     padding: 1rem;
-    margin: .5rem;
+    margin: .5rem auto;
+    cursor: pointer;
+    max-width: 320px;
     box-shadow: 2px 1px 20px 2px rgba(0,0,0,0.1);
     transition: box-shadow;
     transition-duration: 0.5s;
@@ -71,6 +75,50 @@ img {
       margin: 0 auto;
       text-align: center;
       color: $blue700;
+    }
+  }
+}
+
+// class the creates the Gallery layout
+.gallery {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1180px;
+  margin: 1rem auto;
+
+  .gallery-item {
+    margin-left: .5rem;
+    margin-right: .5rem;
+  }
+  .prev, .next {
+    display: none;
+  }
+}
+
+// class the creates the Slideshow layout
+.slideshow {
+  display: block;
+  flex-direction: unset;
+  flex-wrap: unset;
+  justify-content: unset;
+
+  .gallery-item {
+    display: none;
+  }
+  .slideshowNav {
+    margin: 0 auto;
+    max-width: 1180px;
+    text-align: center;
+    
+    .prev, .next {
+      display: inline-block;
+      cursor: pointer;
+      background-color: $gray400;
+      padding: .5rem;
+      margin: 1rem;
+      border-radius: 10px;
     }
   }
 }
