--- a/gallery/src/sass/custom/_main.scss
+++ b/gallery/src/sass/custom/_main.scss
@@ -15,6 +15,10 @@ h1 {
   font-size: 3rem;
 }
 
+h3 {
+  font-size: 1.5rem;
+}
+
 img {
   width: 320px;
   height: 240px;
@@ -51,7 +55,9 @@ img {
 }
 
 #gallery {
-   .gallery-item {
+  display: none;
+
+  .gallery-item {
     background-color: $gray400;
     border-radius: 10px;
     padding: 1rem;
@@ -81,7 +87,7 @@ img {
 
 // class the creates the Gallery layout
 .gallery {
-  display: flex;
+  // display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -99,7 +105,7 @@ img {
 
 // class the creates the Slideshow layout
 .slideshow {
-  display: block;
+  // display: block;
   flex-direction: unset;
   flex-wrap: unset;
   justify-content: unset;
@@ -111,7 +117,7 @@ img {
     margin: 0 auto;
     max-width: 1180px;
     text-align: center;
-    
+
     .prev, .next {
       display: inline-block;
       cursor: pointer;
