prev & next working

--- a/gallery/src/sass/custom/_main.scss
+++ b/gallery/src/sass/custom/_main.scss
@@ -85,7 +85,7 @@ img {
   }
 }
 
-// class the creates the Gallery layout
+// class that shows the Gallery layout
 .gallery {
   // display: flex;
   flex-direction: row;
@@ -103,7 +103,7 @@ img {
   }
 }
 
-// class the creates the Slideshow layout
+// class that shows the Slideshow layout
 .slideshow {
   // display: block;
   flex-direction: unset;
